# pera

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  llm.rs  prompt.rs
crates/agents/src/adapters/: openai.rs
crates/agents/src/prompts/: base_system.md  code_generation_system.md  skills_system.md
crates/agents/src/providers/: openai.rs
crates/canonical/: Cargo.toml
crates/canonical/src/: bindings.rs  ir.rs  lib.rs  python.rs  wit.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  config.rs  error.rs  main.rs
crates/cli/src/commands/: bindings.rs  mod.rs  repl.rs  run.rs  serve.rs  skill.rs
crates/cli/src/commands/eval/: artifacts.rs  mod.rs  overrides.rs  spec.rs
crates/cli/src/repl/: mod.rs  participants.rs  prompt_debug.rs  renderer.rs  session.rs  transport.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  code.rs  event.rs  ids.rs  interpreter.rs  lib.rs  run.rs  skill.rs  value.rs
crates/evals/: Cargo.toml
crates/evals/src/: engine.rs  error.rs  evaluator.rs  execution.rs  lib.rs  overrides.rs  runner.rs  scripted_user.rs  simulated_user.rs  spec.rs  user.rs
crates/evals/src/prompts/: judge_system.md  judge_user.md  optimization_suggestions_system.md  optimization_suggestions_user.md  simulated_user_context.md  simulated_user_first_turn_context.md  simulated_user_first_turn_system.md  simulated_user_follow_up_context.md  simulated_user_follow_up_system.md  simulated_user_system.md
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  openai.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: error.rs  lib.rs  orchestrator.rs  runtime.rs  streaming.rs  tests.rs  traits.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: action.rs  agent_workspace.rs  catalog.rs  code_environment.rs  code_tools.rs  engine.rs  events.rs  fs.rs  in_memory.rs  lib.rs  run_executor.rs  skills.rs  tests.rs
crates/runtime/src/capabilities/: mod.rs  sqlite.rs  ui.rs
crates/runtime/src/interpreter/: mod.rs  monty.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  error.rs  lib.rs  state.rs
crates/server/src/state/: session.rs  todo.rs
crates/skills/: Cargo.toml
crates/skills/src/: componentizer.rs  error.rs  host.rs  lib.rs  manifest.rs  provision.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
docs/: execution-core.md  project-structure.md
docs/images/: architecture-2.excalidraw  overview.excalidraw  skills.excalidraw
evals/: business-trip-shared-room.yaml  skill-activation-planning.yaml
examples/: README.md  async_batch_processing.py  async_external_call.py  basic_math.py  collections_and_loops.py  external_calls_top_level.py  print_and_transform.py  secret_service_operations.py  secret_service_with_weather.py
examples/ui_demo/: Cargo.toml
examples/ui_demo/specs/: todo-app.json
examples/ui_demo/src/: main.rs  todo_env.rs  ui_participant.rs
skills/core/ui/: SKILL.md  app.py  manifest.yaml  pyproject.toml  world.wit
skills/examples/calendar-ops/: app.py  pyproject.toml  world.wit
skills/examples/calendar-ops/db/schema/: 0001_init.sql
skills/examples/calendar-ops/db/seeds/: shared_room_required.sql
skills/examples/secret-service/: .gitignore  SKILL.md  app.py  manifest.yaml  pyproject.toml  world.wit
skills/examples/secret-service/db/: README.md  migrations.toml
skills/examples/secret-service/db/schema/: 0001_init.sql  0002_indexes.sql
skills/examples/secret-service/db/seeds/: operation_nightfall.sql
skills/examples/travel-desk/: app.py  pyproject.toml  world.wit
skills/examples/travel-desk/db/schema/: 0001_init.sql
skills/examples/travel-policy/: SKILL.md  app.py  manifest.yaml  pyproject.toml  world.wit
skills/examples/travel-policy/db/schema/: 0001_init.sql
skills/examples/weather-brief/: SKILL.md  app.py  manifest.yaml  world.wit
web/ui-shell/: README.md  index.html  package-lock.json  package.json
web/ui-shell/src/: api.ts  main.ts  styles.css  types.ts
