[workspace]
members = [
    "crates/core",
    "crates/canonical",
    "crates/runtime",
    "crates/orchestrator",
    "crates/agents",
    "crates/cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata]
description = "Trusted execution substrate for agent-generated programs."

[profile.dev.package.wasmtime-internal-cache]
# Wasmtime's cache crate keys debug-build cache directories by the current
# executable mtime when debug assertions are enabled. Disabling them here keeps
# the cache namespace stable across normal `cargo run` rebuilds, so component
# warm-up can reuse `.pera/cache/wasmtime` during local iteration.
debug-assertions = false
