[package]
name = "pera-agents"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
futures-util = "0.3"
pera-canonical = { path = "../canonical" }
pera-core = { path = "../core" }
pera-orchestrator = { path = "../orchestrator" }
pera-runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
