[package]
name = "pera-agents"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
pera-canonical = { path = "../canonical" }
pera-core = { path = "../core" }
pera-llm = { path = "../llm" }
pera-orchestrator = { path = "../orchestrator" }
pera-runtime = { path = "../runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
