[package]
name = "pera-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
pera-canonical = { path = "../canonical" }
pera-core = { path = "../core" }
pera-runtime = { path = "../runtime", features = ["monty"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "pera"
path = "src/main.rs"
