[package]
name = "pera-cli"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
dotenvy = "0.15"
pera-agents = { path = "../agents" }
pera-canonical = { path = "../canonical" }
pera-core = { path = "../core" }
pera-evals = { path = "../evals" }
pera-llm = { path = "../llm" }
pera-orchestrator = { path = "../orchestrator" }
pera-runtime = { path = "../runtime" }
pera-server = { path = "../server" }
pera-skills = { path = "../skills" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "pera"
path = "src/main.rs"
