[package]
name = "pera-evals"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
pera-llm = { path = "../llm" }
pera-orchestrator = { path = "../orchestrator" }
pera-skills = { path = "../skills" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.13"
