[package]
name = "pera-runtime"
version.workspace = true
edition.workspace = true

[features]
default = []
monty = ["dep:monty"]

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
pera-canonical = { path = "../canonical" }
pera-core = { path = "../core" }
monty = { git = "https://github.com/pydantic/monty", rev = "60538204fd9cd420d1a93042bb52f7168fb9fca2", optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
wasmtime = { version = "34.0.2", features = ["component-model", "cranelift"] }
wasmtime-wasi = "34.0.2"

[lib]
path = "src/lib.rs"
