[package]
name = "pera-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
pera-canonical = { path = "../canonical" }
pera-core = { path = "../core" }
pera-orchestrator = { path = "../orchestrator" }
monty = { git = "https://github.com/pydantic/monty", rev = "60538204fd9cd420d1a93042bb52f7168fb9fca2" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "sync"] }
tracing = "0.1"
wasmtime = { version = "42.0.0", features = ["component-model", "cranelift"] }
wasmtime-wasi = "42.0.0"

[lib]
path = "src/lib.rs"
