[package]
name = "ui-demo"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
pera-core = { path = "../../crates/core" }
pera-orchestrator = { path = "../../crates/orchestrator" }
pera-ui = { path = "../../crates/ui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

