[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaw-skill-core-ui"
version = "0.1.0"
description = "Core UI skill package for Pera"
readme = "SKILL.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ui*", "wit_world*", "wasm*"]
