[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaw-skill-example-calendar-ops"
version = "0.1.0"
description = "Example calendar-ops skill package for miniclaw"
readme = "SKILL.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["calendar_ops*", "wit_world*", "wasm*"]
