[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaw-skill-example-secret-service"
version = "0.1.0"
description = "Example secret-service skill package for miniclaw"
readme = "SKILL.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["secret_service*", "wit_world*", "wasm*"]
