[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaw-skill-example-travel-desk"
version = "0.1.0"
description = "Example travel-desk skill package for miniclaw"
readme = "SKILL.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["travel_desk*", "wit_world*", "wasm*"]
